# spreadsheet_analysis_automation

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml  smartsheet_rpa.db
app/: main.py
app/config/: database.py  settings.py
app/core/: sheets_repository.py  tasks_repository.py  users_repository.py
app/domain/: routine.py
app/domain/entities/: sheets.py  tasks.py  user.py
app/domain/sql/dml/: insert.py
app/models/: sheets.py  tasks.py  user.py
app/queries/: routine_repository.py  sheets_repository.py  tasks_repository.py  users_repository.py
app/services/: daily_checking.py  deal_with_csv.py  email.py  html.py  routine.py  sheets.py
app/services/entities/: sheets.py  tasks.py  user.py
app/sheets/: smartsheet.py
docker/: docker-compose.yml
migrations/: env.py
migrations/versions/: 91efd44f994d_first_revision.py
sql/: teste.sql
sqlite/: create_db.py
tests/app/: test_data_checking.py  test_insert_users_into_db.py  test_routine.py  test_sheets_db.py  test_tasks_db.py  test_users_db.py
tests/fixtures/: dataframe_fixtures.py  real_user_and_sheet_fixtures.py  sheets_fixtures.py  tasks_fixtures.py  user_fixtures.py
