[tool.poetry]
name = "Smartsheet_RPA"
version = "0.1.0"
description = ""
authors = ["Gabriel Tavares <gabriel.tavares@syngenta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.16"
psycopg2 = "^2.9.6"
pydantic-settings = "^2.0.1"
pandas = "^2.0.3"
alembic = "^1.11.3"
pywin32 = "^306"
smartsheet-python-sdk = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
